Fix text alignment

--- a/wp-content/themes/iusedautoparts/css/site.css
+++ b/wp-content/themes/iusedautoparts/css/site.css
@@ -896,11 +896,11 @@ body {
 .email_tooltip {
     color: gray;
     font-size: 13px;
-    text-align: left;
+    text-align: center;
     width: 65%;
     margin: 0 auto;
     display: block;
-    margin-top: 5px;
+    margin-top: 10px;
 }
 
 
